Make saves file same file name as bin

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 									class="form-control"
 									type="file"
 									name="decodeFile"
+									id="fileSelect"
 									onchange="previewDecodeImage()"
 								/>
 							</div>
